# ductus

./: AGENTS.md  CLAUDE.md  HANDOFF.md  Makefile
.claude/: AGENTS.md  HANDOFF.md  README.md  settings.json  setup.sh  statusline.sh
.claude/.contextus/: README.md  contextus  layers
.claude/.spec/: KNOWLEDGE.md  PLAN.md  README.md
.claude/agents/: code-reviewer.md  planner.md  security-reviewer.md  tdd-guide.md
.claude/hooks/: safety-net-fragment.json  safety-net.sh
.claude/hooks/memory-persistence/: pre-compact.sh  session-end.sh  session-start.sh
.claude/rules/: agent-security.md  memory.md  multi-repo.md  portability.md  sdd.md  security.md
.claude/rules/contextus/: anti-patterns.md  minutes.md  orchestration.md  structured-markdown.md  worklog.md
.claude/rules/contextus-claude/: git-workflow.md
.claude/rules/contextus-dev/: anti-patterns.md  dev-principles.md
.claude/rules/contextus-dev-rust/: dependencies.md  error-handling.md  linting.md  testing.md
.claude/rules/rust/: ai-agent-rust.md  ci-checks.md  rust-style.md  static-binary.md  workspace.md
.claude/skills/dumpmem/: SKILL.md
.claude/skills/handoff/: SKILL.md
.claude/skills/handover/: SKILL.md
.contextus/: layers
.contextus/contextus/: registry.jsonl
.contextus/contextus-claude/: bootstrap.sh  statusline.sh
.github/workflows/: ci.yml  release.yml
.spec/: KNOWLEDGE.md  MINUTES.md  PLAN.md  SPEC.md  TODO.md  WORKLOG.md
proxy/: Cargo.toml  Makefile  README.md  allowlist.txt  config.toml
proxy/src/: lib.rs  main.rs
proxy/tests/: proxy_test.rs
(+30 files in other folders)
